--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,29 @@
 {
-  "name": "backend",
+  "name": "back-end-json",
   "version": "1.0.0",
-  "description": "Backend server for Smart Hub BMIS",
-  "main": "app.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node app.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server-ecoderum.js"
   },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "express": "^4.18.2"
+    "@supabase/supabase-js": "^2.46.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "express-fileupload": "^1.5.1",
+    "ip": "^2.0.1",
+    "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
+    "multer": "^2.0.0",
+    "mysql2": "^3.11.4",
+    "node-fetch": "^2.7.0",
+    "nodemon": "^3.1.7",
+    "sequelize": "^6.37.5",
+    "sharp": "^0.33.5",
+    "wrangler": "^3.102.0"
   }
 }
